syntax = "proto3";

package cart;
option go_package="./cart";

service Cart {
    rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
    rpc RemoveFromCart(RemoveFromCartRequest) returns (RemoveFromCartResponse);
    rpc ListCartItems(ListCartItemsRequest) returns (ListCartItemsResponse);
}

message AddToCartRequest {
    int64 user_id = 1;
    int64 product_id = 2;
    int32 quantity = 3;
}

message AddToCartResponse {}

message RemoveFromCartRequest {
    int64 user_id = 1;
    int64 product_id = 2;
}

message RemoveFromCartResponse {}

message ListCartItemsRequest {
    int64 user_id = 1;
}

message CartItem {
    int64 product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    float price = 4;
}

message ListCartItemsResponse {
    repeated CartItem items = 1;
}